--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,9 @@
     <string name="lock_recording_incorrect_too_short">应连接至少4个点。</string>
     <string name="lock_pattern_entered_header">记录密码</string>
     <string name="lock_need_to_confirm">再次绘制图案以确认</string>
-    <string name="lock_need_to_unlock_wrong">密码不匹配，请重试。</string>
+    <string name="lock_need_to_unlock_wrong">密码不匹配,请重试</string>
     <string name="password_gestrue_tips">绘制密码解锁</string>
-    <string name="password_error_count">密码不匹配。请重试。</string>
+    <string name="password_error_count">密码不匹配,请重试</string>
     <string name="lock_draw_unlock_pattern">画出解锁路径</string>
     <string name="lock_enter_pin_code">输入数字密码</string>
     <string name="lock_pattern_confirmed_header"></string>
