--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="lock_pattern_entered_header">记录密码</string>
     <string name="lock_need_to_confirm">再次绘制图案以确认</string>
     <string name="lock_need_to_unlock_wrong">密码不匹配,请重试</string>
-    <string name="password_gestrue_tips">绘制密码解锁</string>
+    <string name="password_gestrue_tips">请绘制密码解锁</string>
     <string name="password_error_count">密码不匹配,请重试</string>
     <string name="lock_draw_unlock_pattern">画出解锁路径</string>
     <string name="lock_enter_pin_code">输入数字密码</string>
@@ -23,4 +23,7 @@
     <string name="unlock_tip_self">身份确认</string>
     <string name="sys_app_title">系统应用(%d)</string>
     <string name="user_app_title">第三方应用(%d)</string>
+    <string name="gesture_or_fingerprint">请用指纹或图案解锁</string>
+    <string name="fingerprint_wrong">指纹不匹配</string>
+    <string name="fingerprint_authentication_error">指纹已禁用，请稍候再尝试</string>
 </resources>
